--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,12 @@ body, html {
     display: none;
 }
 
+.font {
+    font-family: 'DM Mono', monospace;
+    font-weight: 400;
+    font-size: 11px;
+}
+
 .bg-img {
     background-position: center;
     background-repeat: repeat;
@@ -18,24 +24,25 @@ body, html {
     z-index: -1;
 
     position: fixed;
-    width: 100dvw;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
     overflow: auto;
 }
 
 .bg-img video {
     width: 100%;
     height: 100%;
+    position: fixed;
     object-fit: cover;
 }
 
 #base-grid {
     margin: 0 auto;
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
-.titlebanner {
+.title-banner {
     margin: 0 auto;
     width: 660px;
     padding: 10px;
@@ -45,7 +52,78 @@ body, html {
     top: 30px;
 }
 
-.titlebanner .title {
+.landing-banner {
+    margin: 0 auto;
+    width: 660px;
+    padding: 10px;
+    position: relative;
+    color: white;
+    background-color: black;
+    top: 30px;
+}
+    .landing-banner .title {
+        font-family: 'DM Mono', monospace;
+        font-weight: 400;
+        word-wrap: break-word;
+        margin: 0px;
+        text-align: left;
+        hyphens: manual;
+        letter-spacing: -1px;
+        font-size: 30px;
+        line-height: 33px;
+    }
+
+    @media only screen and (max-width: 740px) {
+        .title-banner {
+            width: 88%;
+        }
+        
+        .landing-banner {
+            width: 88%;
+        }
+    }
+
+.landing-welcome {
+    margin: 0 auto;
+    width: 360px;
+    height: 160px;
+    padding: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 200px;
+    color: white;
+    background-color: black;
+}
+
+#enter {
+    margin: 0 auto;
+    margin-top: 5px;
+    padding: 13px 30px;
+    border: 1px solid #4DA62F;
+    color: black;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+    font-family: 'DM Mono', monospace;
+    font-size: 15px;
+    background-color: white;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+    #enter:hover {
+        color: black;
+        background-color: #4DA62F;
+        border: 1px solid black;
+        border-radius: 2px;
+    }
+
+
+.title-banner .title {
     font-family: 'DM Mono', monospace;
     font-weight: 400;
     word-wrap: break-word;
@@ -275,6 +353,7 @@ body, html {
         border: 1px solid black;
         border-radius: 2px;
     }
+
 
 @media only screen and (max-width: 1200px) {
     .prj-grid {
