--- a/styles/styles.css
+++ b/styles/styles.css
@@ -354,6 +354,17 @@ body, html {
         border-radius: 2px;
     }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+footer h4 {
+    padding: 30px;
+}
+
 
 @media only screen and (max-width: 1200px) {
     .prj-grid {
