--- a/styles/styles.css
+++ b/styles/styles.css
@@ -363,7 +363,15 @@ footer {
 
 footer h4 {
     padding: 30px;
+    color: white;
+    mix-blend-mode: difference;
 }
+
+    @media only screen and (max-width: 740px) {
+        footer h4 {
+            mix-blend-mode: difference;
+        }
+    }
 
 
 @media only screen and (max-width: 1200px) {
