--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,27 @@
 body, html {
     margin: 0 auto;
     background-color: transparent;
+    animation: fadeBackground 4s;
+    animation-fill-mode: forwards;
 }
+
+    @keyframes fadeBackground {
+        from { opacity: 0%; }
+        to {opacity: 100%; }
+    }
+
+.marquee,
+.landing {
+    animation: fadeContent 5s;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
+    opacity: 0%;
+}
+
+    @keyframes fadeContent {
+        from { opacity: 0%; }
+        to {opacity: 100%; }
+    }
 
 .hidden {
     display: none;
